epm_kubernets/task3/result/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /\$1
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9001
        path: /(.*)
        pathType: Prefix
